--- a/web/package.json
+++ b/web/package.json
@@ -11,17 +11,28 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.87",
-    "@iconify-json/simple-icons": "^1.2.68",
+    "@iconify-json/lucide": "^1.2.89",
+    "@iconify-json/simple-icons": "^1.2.70",
+    "@internationalized/date": "^3.11.0",
     "@nuxt/ui": "^4.4.0",
-    "nuxt": "^4.3.0",
-    "tailwindcss": "^4.1.18"
+    "@tanstack/table-core": "^8.21.3",
+    "@unovis/ts": "^1.6.4",
+    "@unovis/vue": "^1.6.4",
+    "@vueuse/core": "^14.2.0",
+    "@vueuse/nuxt": "^14.2.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "nuxt": "^4.3.1",
+    "scule": "^1.3.0",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.28",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.13.0",
-    "eslint": "^9.39.2",
+    "@nuxt/eslint": "^1.14.0",
+    "eslint": "^10.0.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.4"
   },
-  "packageManager": "pnpm@10.28.2"
+  "packageManager": "pnpm@10.29.2"
 }
